--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_annotations.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_annotations.htm
@@ -50,7 +50,7 @@ and thus its annotation model.</p>
 workspace.&nbsp; (See <a href="resAdv_markers.htm">Resource markers</a> for more
 information on markers.)&nbsp; It assigns an image and description to each marker and monitors its resource for changes in the markers.</p>
 <p>To see how an annotation model is displayed in a text editor, we'll examine
-the platform text editor and and its use of rulers and annotations.&nbsp; The
+the platform text editor and its use of rulers and annotations.&nbsp; The
 specifics of how different annotations are shown in the rulers and text can be
 controlled by the user in the <b>Workbench &gt; Editors &gt; Text Editor</b>
 preferences on the <b>Annotations</b> tab.</p>
@@ -96,7 +96,7 @@ for clarity:</p>
 model.&nbsp;&nbsp;</p>
 
 <p>Let's look at the ruler itself.&nbsp; It is created by the text editor and 
-  then connected with the editor's viewer..&nbsp; Since the Java editor example 
+  then connected with the editor's viewer.&nbsp; Since the Java editor example 
   does not define any special behavior for rulers, it inherits the ruler as defined 
   in <a href="../reference/api/org/eclipse/ui/texteditor/TextEditor.html"><b>TextEditor</b></a>.</p>
 
