--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_sourceviewers.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_sourceviewers.htm
@@ -19,7 +19,7 @@ Configuring a source viewer
   such as text hovering and syntax highlighting.&nbsp; &nbsp;For that the editor 
   supplies a <b><a href="../reference/api/org/eclipse/jface/text/source/SourceViewerConfiguration.html">SourceViewerConfiguration</a> 
   </b>that is used to configure the <b><a href="../reference/api/org/eclipse/jface/text/source/SourceViewer.html">SourceViewer</a></b> 
-  when it created.&nbsp; The Java example editor only needs to supply a <b><a href="../reference/api/org/eclipse/jface/text/source/SourceViewerConfiguration.html">SourceViewerConfiguration</a> 
+  when it is created.&nbsp; The Java example editor only needs to supply a <b><a href="../reference/api/org/eclipse/jface/text/source/SourceViewerConfiguration.html">SourceViewerConfiguration</a> 
   </b>appropriate for its needs.&nbsp; The following snippet shows how the <b>JavaTextEditor</b> 
   creates its configuration:</p>
 <pre><font color="#4444CC">protected void initializeEditor() {
