--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -825,7 +825,8 @@
 			</td>
 		</tr>
 		<tr>
-			<td valign="top" align="right"><b>Threads &amp; Monitors view</b></td>
+			
+    <td valign="top" align="right"><b>Threads and Monitors view</b></td>
 			<td valign="top" align="left">
 			<p>The debugger's<b> Threads and Monitors</b> view shows which
 			threads are holding locks and which are waiting to acquire locks.</p>
