Replace & with &amp;

--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -533,7 +533,7 @@
 				name</li>
 				<li>You can open the Hierarchy view not only on types but also on
 				packages, source folders, JAR archives and Java projects.</li>
-				<li>You can Drag & Drop an element onto the Hierarchy view to
+				<li>You can Drag &amp; Drop an element onto the Hierarchy view to
 				focus it on that element.</li>
 				<li>You can change the orientation (from the default vertical to
     horizontal) of the Hierarchy view from the view's toolbar menu.
