*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64a_another.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64a_another.htm
@@ -40,23 +40,18 @@ we will do the following:
 <TABLE BORDER="0" cellspacing="0" cellpadding="3" width="568">
 <TR>
 <TD valign="top" width="71" align="left">
-<P CLASS="Para">
 <b>incoming</b>
-</P>
 </TD>
 <TD valign="top" width="481" align="left">
-<P CLASS="Para">
-Changes that are in the repository, which you have not yet updated to.</P>
+Changes that are in the repository, which you have not yet updated to.
 </TD>
 </TR>
 <TR>
 <TD valign="top" width="71" align="left">
-<P CLASS="Para"><b>outgoing</b>
-</P>
+<b>outgoing</b>
 </TD>
 <TD valign="top" width="481" align="left">
-<P CLASS="Para">
-Changes that you are committing.</P>
+Changes that you are committing.
 </TD>
 </TR>
 <TR>
