--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -205,7 +205,7 @@
 	<col width="80%" valign="top" align="left">
   </colgroup>
   <tr>
-    <td><b>Threads &amp; Monitors view</b></td>
+    <td><b>Threads and Monitors view</b></td>
 	<td><p>The debugger's new <b>Threads and Monitors</b> view shows which threads 
         are holding locks and which are waiting to acquire locks. </p>
       <p><img src="images/threads-monitors.gif" width="373" height="260" alt="Monitors view showing deadlock cycles"> </p>
@@ -213,7 +213,7 @@
 	</td>
   </tr>
   <tr>
-    <td><b>Instance breakpoints &amp; watchpoints</b></td>
+    <td><b>Instance breakpoints and watchpoints</b></td>
 	<td>You can now set breakpoints &amp; 
       watch points specific to a particular object instance. In the Variables 
       view, choose <b>Instance Breakpoints...</b> from the variables context menu. 
@@ -222,11 +222,11 @@
   </tr>
   <tr>
     <td><b>Improved conditional breakpoints</b></td>
-	<td>A traditional conditional breakpoint 
-      is triggered by a boolean expression evaluating to &quot;true&quot;. It 
-      is now possible to declare conditional breakpoints that are triggered whenever 
-      the value of an expression changes. In addition, code assist is now available 
-      when entering the condition. 
+	<td>A traditional conditional breakpoint is triggered by a boolean expression 
+      evaluating to &quot;true&quot;. It is now possible to declare conditional 
+      breakpoints that are triggered whenever the value of an expression changes. 
+      In addition, code assist is now available when typing the in the conditional 
+      expression. 
       <p><img src="images/conditional-breakpoint.gif" width="351" height="171" alt="Breakpoint properties dialog"></p>
 	</td>
   </tr>
@@ -240,13 +240,11 @@
 	</td>
   </tr>
   <tr>
-    <td><b>New ways to create watch items</b></td>
-	<td>      The Java debugger can now create watch items from the 
-        Java editor by selecting an expression and using the <b>Watch</b> action 
-        (available in the context menu, and in the <b>Run</b> menu). As well, 
-        a watch item can be created by selecting a variable and using the <b>Watch</b> 
-        action.
-</td>
+    <td><b>New ways to create watch expressions</b></td>
+	<td> You can create watch expressions by selecting an expression in the Java 
+      editor and using the <b>Watch</b> action (available in the context menu, 
+      and in the <b>Run</b> menu). As well, a watch item can be created by selecting 
+      a variable and using the <b>Watch</b> action. </td>
   </tr>
   <tr>
     <td><b>Step filters</b></td>
@@ -276,10 +274,9 @@
   </tr>
   <tr>
     <td><b>Console buffer size</b></td>
-	<td>The Console view now hangs on to only the most 
-      recent N characters of output (default is 80K). The console buffer size 
-      can be configured via the <b>Debug &gt; Console</b> preference page.
-	</td>
+	<td>The Console view retains only the most recent N characters of output (default 
+      is 80K). The console buffer size can be configured via the <b>Debug &gt; 
+      Console</b> preference page. </td>
   </tr>
   <tr>
     <td><b>Filtering constants &amp; statics</b></td>
@@ -298,9 +295,10 @@
   </tr>
   <tr>
     <td><b>Instruction pointer</b></td>
-	<td><p>When debugging, the Java editor now indicates the currently executing 
-        with an arrow in the left margin. This arrow is solid for the top stack 
-        frame and hollow for non-top stack frames. </p>
+	<td>
+      <p>When debugging, the Java editor now indicates the currently executing 
+        line with an arrow in the left margin. This arrow is solid for the top 
+        stack frame and hollow for non-top stack frames. </p>
       <p><img src="images/instruction-pointer.gif" width="401" height="66" alt="Instruction pointer appears in editor ruler"></p>
 	 </td>
   </tr>
