--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -240,10 +240,10 @@
 	</td>
   </tr>
   <tr>
-    <td><b>New ways to create watch expressions</b></td>
-	<td> You can create watch expressions by selecting an expression in the Java 
-      editor and using the <b>Watch</b> action (available in the context menu, 
-      and in the <b>Run</b> menu). As well, a watch item can be created by selecting 
+    <td><b>Watch items</b></td>
+	<td> You can create watch item by selecting an expression in the Java editor 
+      and using the <b>Watch</b> action (available in the context menu, and in 
+      the <b>Run</b> menu). As well, a watch item can be created by selecting 
       a variable and using the <b>Watch</b> action. </td>
   </tr>
   <tr>
