added entry for structural java compare

--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -79,7 +79,7 @@
       the chosen completion or only do an insert. The default behaviour (overwrite 
       or insert) is defined in <b>Window &gt; Preferences &gt; Java &gt; Editor 
       &gt; Code Assist</b>.<br>
-			You can toggle the behaviour while inside the content assist selection dialog by pressing the <b>Ctrl</b> key while selecting the completion.<b></b></td>
+			You can temporarily toggle the behaviour while inside the content assist selection dialog by pressing the <b>Ctrl</b> key while selecting the completion.<b></b></td>
 		</tr>
 		<tr>
 			<td width="20%" valign="top" align="right"><b>Create Getter and
@@ -106,7 +106,7 @@
    <td valign="top" align="left" width="80%">To create a delegate method
    for a field select the field's declaration and invoke <b>Source
 			&gt; <b>Generate Delegate Methods</b></b>. This adds the selected
-			methods to the type that contains a forward call delegated methods.
+			methods to the type that contains a forward call to delegated methods.
 			This is an example of a delegate method:
 			<blockquote><tt>public void addModifyListener(ModifyListener
 			listener) {<br>
@@ -136,7 +136,7 @@
    There are also existing templates, such as 'private_method', 'public_method',
 			'protected_method' and more.<br>
    Use the <b>Tab</b> key to navigate between the values to enter (return
-			type, name and arguments)
+			type, name and arguments).
 			<p><img src="images/templates-create-method.gif" width=378 height=82 border="0" alt="Content assist with new method template proposals"></p>
 </td>
 		</tr>
@@ -149,10 +149,9 @@
 </td>
 		</tr>
 		<tr>
-			<td width="20%" valign="top" align="right"><b>Use Content Assist to
-			override a method</b></td>
+			<td width="20%" valign="top" align="right"><b>Use Content Assist to override a method</b></td>
 			<td valign="top" align="left" width="80%">Invoke <b>Content Assist
-			(Ctrl+Space)</b> in the type body at the place where the method
+			(Ctrl+Space)</b> in the type body at the location where the method
 			should be added. Content assist will offer all methods that can be
    			overridden. A method body for the chosen method will be created.
 			<p><img src="images/code-assist-newmethod.gif" width=444 height=98 border="0" alt="'Overrride method' content assist"></p>
@@ -164,7 +163,7 @@
 			<td valign="top" align="left" width="80%">To implement a new
 			interface, add the 'implements' declaration first to the type.
 			Without the need to save or build, the Java editor will underline the
-   type to signal that methods are missing and show the Quick Fix light
+   type to signal that methods are missing and will show the Quick Fix light
 			bulb. Click on the light bulb or press <b>Ctrl+1 (Edit &gt; Quick
 			Fix)</b> to choose between adding the unimplemented methods or making
 			your class abstract.
@@ -185,7 +184,7 @@
 		<tr>
 			<td width="20%" valign="top" align="right"><b>Local rename</b></td>
 			<td valign="top" align="left" width="80%">To quickly do a rename that
-   doesn't require full analysis of dependencies in other files use
+   doesn't require full analysis of dependencies in other files, use
    the 'local rename' Quick Assist. In the Java Editor, position the
 			cursor in an identifier of a variable, method or type and press <b>Ctrl+1
 			(Edit &gt; Quick Fix)</b><br>
@@ -253,7 +252,7 @@
 		</tr>
 		<tr>
 			<td width="20%" valign="top" align="right"><b>Structured selections</b></td>
-			<td width="80%" valign="top">You can&nbsp;quickly select Java code syntactically
+			<td width="80%" valign="top">You can quickly select Java code syntactically
 			using the Structured Selection feature.<br>
       Highlight the text and press <b>Ctrl+Shift+Arrow Up</b> or select <b>Edit 
       &gt; Expands Selection To &gt; Enclosing Element</b> from the menu bar - 
@@ -389,7 +388,7 @@
       <ol>
         <li>Open the search dialog and click on the <b>Java Search</b> tab.</li>
         <li>Type '*' and the return type, separated by a space, in the <b>Search 
-          string</b>.&nbsp;</li>
+          string</b>.</li>
         <li>Select the <b>Case sensitive</b> checkbox.</li>
         <li>Select <b>Method</b> and <b>Declarations</b> and then click <b>Search.</b></li>
       </ol>
@@ -629,6 +628,40 @@
       if tests are finished) and the JUnit view will appear. This behavior can 
       be configured via the <b>Java > JUnit </b>preference page.</td>
 		</tr>
+
+	<tr>
+		<td valign="top" align="right">
+			<b>Structural compare of Java source</b>
+		</td>
+		
+		<td valign="top" align="left">
+			A structural comparison of Java source 
+			ignores the textual order of Java elements like methods and fields and better shows
+			which elements were changed, added, or removed.
+			<br>
+			For initiating a structural comparison of Java files you have two options:
+			<ul>
+				<li>Select two Java compilation units and choose
+					<b>Compare With</b> &gt; <b>Each Other</b> from the view's context menu.
+					If the files have differences, they are opened into a Compare Editor.
+					The top pane shows the differing Java elements; double clicking on one of them
+					shows the source of the element in the bottom pane.
+				</li>
+				<li>
+					In any context where a file comparison is involved (e.g. a CVS
+					Synchronization) a double click on a Java file not only shows
+					the content of the file in a text compare viewer, but it also performs
+					a structural compare and opens a new pane showing the results.
+				</li>
+			</ul>
+			<p><img src="images/compare-java.gif" width="444" height="321" alt="Structural compare of Java source"></p>
+			You can even ignore comments and formatting changes when performing the structural compare:
+			turn on the <strong>Ignore Whitespace</strong> option via the Compare Editor's toolbar button, or 
+			the CVS Synchronization View's drop down menu.
+		</td>
+	</tr>		
+
+
 	<tr>
 		<td valign="top" align="right">
 			<b>Structural compare of property files</b>
@@ -637,14 +670,14 @@
 		<td valign="top" align="left">
 			A structural comparison of Java property files (extension: .properties) 
 			ignores the textual order of properties and better shows
-			what properties were changed, added, or removed.
-			<p>
+			which properties were changed, added, or removed.
+			<br>
 			For initiating a structural comparison of property files you have two options:
 			<ul>
-				<li>Select two file in the Package Explorer or Navigator and select
-					<b>Compare With</b> &gt; <b>Each Other</b>.
+				<li>Select two files in the Package Explorer or Navigator and choose
+					<b>Compare With</b> &gt; <b>Each Other</b> from the view's context menu.
 					If the files have differences, they are opened into a Compare Editor.
-					The top pane shows the affected properties; clicking on one of them
+					The top pane shows the affected properties; double clicking on one of them
 					shows the source of the property in the bottom pane.
 				</li>
 				<li>
@@ -723,7 +756,7 @@
 			breakpoints</b></td>
 			<td valign="top" align="left">You can use conditional breakpoints in
 			<b> Breakpoint Properties... </b>to control when a
-			breakpoint actually halts execution.&nbsp; You can specify whether
+			breakpoint actually halts execution. You can specify whether
 			you want the breakpoint to suspend execution only when the condition
 			is true, or when the condition value changes.
 			<p><img src="images/conditional-breakpoint-property.gif" width=351 height=172 alt="Breakpoint properties dialog"></p>
@@ -736,7 +769,7 @@
 			and removing a breakpoint in the same place, consider disabling the
 			breakpoint when you don't need it (using <b>Disable Breakpoint </b>in
 			the breakpoint context menu or the <b>Breakpoints view</b>)
-			and enabling it when needed again.&nbsp;
+			and enabling it when needed again.
 			<p><img src="images/breakpoint-context-menu.gif" width=411 height=124 alt="Disable Breakpoint action in the ruler context menu"></p>
 			</td>
 		</tr>
@@ -980,25 +1013,6 @@
 			<p><img src="images/stack-trace-hyperlink.gif" width=416 height=133 alt="Stack traces in Console view with hyperlinks"></p>
 			</td>
 		</tr>
-			
-		<tr>
-			<td valign="top" align="right">
-				<b>Ignoring Java formatting</b>
-			</td>
-			<td valign="top" align="left">
-				When comparing Java files you can 
-				In the Compare Editor select the "Ignore Whitespace" button in the toolbar
-			</td>
-		</tr>
-				
-		<tr>
-			<td valign="top" align="right">
-				<b>Structural compare of Java soure code</b>
-			</td>
-			<td valign="top" align="left">
-			</td>
-		</tr>
-	
 	</tbody>	
 </table>
 
