removed "..." from names of menu entries

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-157.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-157.htm
@@ -19,8 +19,8 @@ signature.
   </li>
   <li> Do one of the following to open the Change Method Signature refactoring dialog: 
     <ul>
-      <li> From the menu bar, select <strong>Refactor &gt; Change Method Signature 
-        </strong> or </li>
+      <li> From the menu bar, select <strong>Refactor &gt; Change Method Signature</strong> 
+        or </li>
       <li> From the method's pop-up menu, select <strong>Refactor &gt; </strong><strong>Change 
         Method Signature</strong></li>
     </ul>
