--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-159.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-159.htm
@@ -21,12 +21,12 @@
       <li>
         Do one of the following: 
         <ul>
-          <li>
-            From the editor's pop-up menu, select <strong>Refactor &gt; Extract Local Variable</strong> or
-          </li>
-          <li>
-            From the menu bar, select <strong>Refactor &gt; Extract Local Variable</strong>
-          </li>
+          
+      <li> From the editor's pop-up menu, select <strong>Refactor &gt; Extract 
+        Local Variable</strong> or </li>
+          
+      <li> From the menu bar, select <strong>Refactor &gt; Extract Local Variable</strong> 
+      </li>
         </ul>
       </li>
     </ul>
