--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-160.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-160.htm
@@ -16,7 +16,7 @@
       <img src="../images/tasks-160a.gif" width=462 height=245 alt="Parameters Page for the Extracting a local variable Refactoring Command">
     </h1>
     <p>
-      Parameters Page for the Extracting a local variable Refactoring Command
+      Parameters Page for the Extracting Local Variable Refactoring Command
     </p>
     <ul>
       <li>
