--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-162.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-162.htm
@@ -22,12 +22,10 @@
       <li>
         Do one of the following 
         <ul>
-          <li>
-            From the menu bar, select <strong>Refactor &gt; Self Encapsulate</strong> or
-          </li>
-          <li>
-            From the field's pop-up menu, select <strong>Refactor &gt; Self Encapsulate</strong>
-          </li>
+          
+      <li> From the menu bar, select <strong>Refactor &gt; Self Encapsulate</strong> 
+        or </li>
+      <li> From the field's pop-up menu, select <strong>Refactor &gt; Self Encapsulate</strong></li>
         </ul>
       </li>
     </ul>
@@ -39,12 +37,10 @@
       <li>
         Do one of the following 
         <ul>
-          <li>
-            From the menu bar, select <strong>Refactor &gt; Self Encapsulate</strong> or
-          </li>
-          <li>
-            From the editor's pop-up menu, select <strong>Refactor &gt; Self Encapsulate</strong>
-          </li>
+          
+      <li> From the menu bar, select <strong>Refactor &gt; Self Encapsulate</strong> 
+        or </li>
+      <li> From the editor's pop-up menu, select <strong>Refactor &gt; Self Encapsulate</strong></li>
         </ul>
       </li>
     </ul>
