--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-165.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-165.htm
@@ -20,12 +20,12 @@
       <li>
         Do on of the following: 
         <ul>
-          <li>
-            From the menu bar, select <strong>Refactor &gt; Pull Up</strong> or
-          </li>
-          <li>
-            From the pop-up menu, select <strong>Refactor &gt; Pull Up</strong>
-          </li>
+          
+      <li> From the menu bar, select <strong>Refactor &gt; Pull Up</strong> or 
+      </li>
+          
+      <li> From the pop-up menu, select <strong>Refactor &gt; Pull Up</strong> 
+      </li>
         </ul>
       </li>
     </ul>
