--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-167.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-167.htm
@@ -22,12 +22,10 @@
       <li>
         Do one of the following: 
         <ul>
-          <li>
-            From the menu bar, select <strong>Refactor &gt; Move</strong> or
-          </li>
-          <li>
-            From the pop-up menu select, <strong>Refactor &gt; Move</strong>
-          </li>
+          
+      <li> From the menu bar, select <strong>Refactor &gt; Move</strong> or </li>
+          
+      <li> From the pop-up menu select, <strong>Refactor &gt; Move</strong> </li>
         </ul>
       </li>
     </ul>
