--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-211.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-211.htm
@@ -16,9 +16,9 @@ To convert a local variable to a field:
   <li> Do one of the following: 
     <ul>
       <li> From the menu bar, select <strong>Refactor &gt; Convert Local Variable 
-        to Field...</strong> or </li>
+        to Field</strong> or </li>
       <li> From the editor's pop-up menu, select <strong>Refactor &gt; Convert 
-        Local Variable to Field...</strong></li>
+        Local Variable to Field</strong></li>
     </ul>
   </li>
 </ul>
