--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-216.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-216.htm
@@ -16,9 +16,9 @@ To convert an anonynous inner class to a nested class:
   <li> Do one of the following: 
     <ul>
       <li> From the menu bar, select <strong>Refactor &gt; Convert Anonymous Class 
-        to Nested...</strong> or </li>
+        to Nested</strong> or </li>
       <li> From the editor's pop-up menu, select <strong>Refactor &gt; Convert 
-        Anonymous Class to Nested...</strong></li>
+        Anonymous Class to Nested</strong></li>
     </ul>
   </li>
 </ul>
