--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-217.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-217.htm
@@ -16,9 +16,9 @@ To convert a nested type to a top level type:
   <li> Do one of the following: 
     <ul>
       <li> From the menu bar, select <strong>Refactor &gt; Convert Nested Type 
-        to Top Level...</strong> or </li>
+        to Top Level</strong> or </li>
       <li> From the editor's pop-up menu, select <strong>Refactor &gt; Convert 
-        Nested Type to Top Level...</strong> </li>
+        Nested Type to Top Level</strong> </li>
     </ul>
   </li>
 </ul>
