--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-218.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-218.htm
@@ -16,10 +16,10 @@ To extract an interface from a type:
     extract an interface</li>
   <li> Do one of the following: 
     <ul>
-      <li> From the menu bar, select <strong>Refactor &gt; Extract Interface...</strong> 
+      <li> From the menu bar, select <strong>Refactor &gt; Extract Interface</strong> 
         or </li>
       <li> From the editor's pop-up menu, select <strong>Refactor &gt; Extract 
-        Interface...</strong> </li>
+        Interface</strong> </li>
     </ul>
   </li>
 </ul>
