--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-219.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-219.htm
@@ -16,9 +16,9 @@ To replace refreces to a type with references to one of its subtypes:
   <li> Do one of the following: 
     <ul>
       <li> From the menu bar, select <strong>Refactor &gt; Use Supertype Where 
-        Possible...</strong> or </li>
+        Possible</strong> or </li>
       <li> From the editor's pop-up menu, select <strong>Refactor &gt; Use Supertype 
-        Where Possible...</strong> </li>
+        Where Possible</strong> </li>
     </ul>
   </li>
 </ul>
