--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-220.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-220.htm
@@ -20,9 +20,9 @@
         Do on of the following: 
         <ul>
           
-      <li> From the menu bar, select <strong>Refactor &gt; Push Down...</strong> 
+      <li> From the menu bar, select <strong>Refactor &gt; Push Down</strong> 
         or </li>
-      <li> From the pop-up menu, select <strong>Refactor &gt; Push Down...</strong></li>
+      <li> From the pop-up menu, select <strong>Refactor &gt; Push Down</strong></li>
         </ul>
       </li>
     </ul>
