--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-208.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-208.htm
@@ -19,12 +19,12 @@
       <li>
         Do one of the following: 
         <ul>
-          <li>
-            From the menu bar, select <strong>Refactor &gt; Inline...</strong> or
-          </li>
-          <li>
-            From the editor's pop-up menu, select <strong>Refactor &gt; Inline...</strong>
-          </li>
+          
+      <li> From the menu bar, select <strong>Refactor &gt; Inline</strong> or 
+      </li>
+          
+      <li> From the editor's pop-up menu, select <strong>Refactor &gt; Inline</strong> 
+      </li>
         </ul>
       </li>
     </ul>
