--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-163.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-163.htm
@@ -29,7 +29,7 @@
         Use the <strong>Insert new method after</strong> combo-box to indicate the location for the getter and/or setter methods.
       </li>
       <li>
-        Select one radio button from the <strong>Access modifier</strong> group to specify the new methods' visibility.
+        Select one radio button from the <strong>Access modifier</strong> group to specify the new method's visibility.
       </li>
       <li>
         In the class in which the field is declared, read and write accesses can be direct or you can use getter and setter. 
