--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-188.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-188.htm
@@ -19,7 +19,7 @@
     folders or projects.</li>
   <li>From the menu bar, select <span class="control">Source &gt; Find Strings 
     to Externalize</span></li>
-  <li>A dialog comes up with a list of all compilation units that have some not-externalized 
+  <li>A dialog comes up with a list of all compilation units that have some non-externalized 
     strings</li>
   <li>In the dialog, you can double click on a listed compilation unit or press 
     the <b>Externalize</b> button to open the Externalize Strings wizard</li>
