*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-189.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-189.htm
@@ -45,7 +45,7 @@ Note: You can double-click on the icons that are displayed on the left side of
 the table entries to alternate the state between <span class="control">Translate</span>, 
 <span
     class="control">Never Translate</span> and <span class="control">Skip</span> 
-<p>Note (explanation of table entry states):</p>
+<p>Note (explanation of the table entry states):</p>
 
     <ul>
       <li>Strings from entries marked as <span class="control">'Translate'</span> will be externalized and marked as such in the Java file by adding non-nls tags.</li>
