--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-220.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-220.htm
@@ -11,7 +11,7 @@
   <body>
     
 <h1> Pushing members down to subclasses</h1>
-    To push down class members (fields and methods) to the class' subclasses: 
+    To push down class members (fields and methods) to the class's subclasses: 
 <ul>
       
   <li> In a Java view (e.g. Outline, Package Explorer, Members), select the members 
