--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_highlighting.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_highlighting.htm
@@ -59,7 +59,7 @@ document's regions to determine the content types affected by the change and
 notifies a damager that is appropriate for the affected content type.&nbsp; Once
 the damage is computed, it is passed to the appropriate repairer which will
 construct repair descriptions that are applied to the viewer to put it back in
-sync with the underlying content.&nbsp;</font></p>
+sync with the underlying content.&nbsp;</p>
 <p>The classes in <b><a href="../reference/api/org/eclipse/jface/text/presentation/reconciler/package-summary.html">org.eclipse.jface.text.reconciler</a></b>
  define additional support classes for synchronizing a document model with
 external manipulation of the document.</p>
